k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: crm-bantu-website
  namespace: default
  labels:
    app: crm-bantu-website
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
    name: http
  selector:
    app: crm-bantu-website
